# itrialspace

./: .dockerignore  .env  .env.example  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  NOTICE  README.md  environment.lock.yml  environment.yml  pyproject.toml  requirements.lock.txt
configs/: paths.example.yaml  trials.yaml
docker/: Dockerfile  Dockerfile.gpu  itrialspace.def
infra/bash/: README.md  docker_run.sh  docker_save.sh  env.sh  run_pipeline.sh  run_sweep.sh
infra/bash/mask_inserter/: insert_masks.sh
infra/bash/nodulemap/: build.sh  serve.sh
infra/bash/retriever/: cli.sh  serve.sh
infra/bash/synthesis/: synthesize.sh
infra/bash/trials/: mode10_multi_nodule_realism.sh  mode11_digital_twin_isolation.sh  mode12_digital_twin_complete.sh  mode13_digital_twin_cross.sh  mode1_controlled_prevalence.sh  mode2_size_detection_curve.sh  mode3_location_sensitivity.sh  mode4_demographic_stratification.sh  mode5_counterfactual.sh  mode6_cross_dataset.sh  mode7_bootstrap_confidence.sh  mode8_algorithm_comparison.sh  mode9_screening_simulation.sh
infra/bash/vlm_eval/: analyze.sh  build_dataset.sh  run_vlm.sh
infra/slurm/: README.md  _gen_caselist.py  env.sh  run_pipeline.sh
infra/slurm/mask_inserter/: mode10_insert_masks.sub  mode10_insert_masks_array.sub  mode11_insert_masks.sub  mode11_insert_masks_array.sub  mode12_insert_masks.sub  mode12_insert_masks_array.sub  mode13_insert_masks.sub  mode13_insert_masks_array.sub  mode1_insert_masks.sub  mode1_insert_masks_array.sub  mode2_insert_masks.sub  mode2_insert_masks_array.sub  mode3_insert_masks.sub  mode3_insert_masks_array.sub  mode4_insert_masks.sub  mode4_insert_masks_array.sub  mode5_insert_masks.sub  mode5_insert_masks_array.sub  mode6_insert_masks.sub  mode6_insert_masks_array.sub  mode7_insert_masks.sub  mode7_insert_masks_array.sub  mode8_insert_masks.sub  mode8_insert_masks_array.sub  mode9_insert_masks.sub  mode9_insert_masks_array.sub  run_integration_full_volume.sub  run_unit_tests.sub  submit_all_arrays.sh  submit_all_inserts.sh  template_insert_masks.sub
infra/slurm/nodulemap/: nodulemap.sub  rebuild_nodulemap.sub
infra/slurm/retriever/: app.sub  cli.sub  jupyter.sub
infra/slurm/synthesis/: audit_mode.py  audit_mode.sub  mode1_nodmaisi_array.sub  nodmaisi_array.sub  nodmaisi_combined_rerun.sub  submit_all_nodmaisi.sh  submit_array_jobs.sh  template_nodmaisi_from_masks.sub
infra/slurm/trials/: mode10_multi_nodule_realism.sub  mode11_digital_twin_isolation.sub  mode12_digital_twin_complete.sub  mode13_digital_twin_cross.sub  mode1_controlled_prevalence.sub  mode2_size_detection_curve.sub  mode3_location_sensitivity.sub  mode4_demographic_stratification.sub  mode5_counterfactual.sub  mode6_cross_dataset.sub  mode7_bootstrap_confidence.sub  mode8_algorithm_comparison.sub  mode9_screening_simulation.sub  submit_all.sh
infra/slurm/vlm_eval/: README.md  analyze.sub  build_dataset.sub  run_vlm.sub
src/itrialspace/: __init__.py  cli.py
src/itrialspace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/itrialspace/apps/: __init__.py
src/itrialspace/apps/nodulemap/: __init__.py  __main__.py
src/itrialspace/apps/retriever/: __init__.py  __main__.py  cli.py  engine.py  notebook.py  search.py  similarity.py  slicer.py
src/itrialspace/config/: __init__.py  datasets.yaml  settings.py
src/itrialspace/core/: label.py  profile.py  schema.py
src/itrialspace/evaluation/: __init__.py
src/itrialspace/evaluation/vlm_eval/: __init__.py  biomedclip_model.py  build_dataset.py  build_negative_dataset.py  build_real_dataset.py  comparison.py  cross_model_comparison.py  inference_cache.py  make_split.py  metrics.py  overlay.py  parsers.py  plots.py  preprocess_profiles.py  prompt_templates.py  (+5 more)
src/itrialspace/index/: nodule_index.py
src/itrialspace/io/: loader.py  registry.py
src/itrialspace/mask_inserter/: __init__.py  __main__.py  cli.py  inserter.py  placement.py  resample.py  resolver_bridge.py
src/itrialspace/query/: __init__.py  matcher.py  query_api.py
src/itrialspace/site/: __init__.py  cohort_builder.py  insertion_planner.py  knowledge_base.py  manifest.py  path_resolver.py  sampling.py  spec.py  trial_modes.py  validation.py
src/itrialspace/trials/: run_trial.py
studies/vls_performance/: README.md  run.sh  vlm_analysis.sub
tools/: add_license_headers.py  check_portability.py
(+65 files in other folders)
